refactor code generator to minimize java side code generation